# blazehash

./: Cargo.toml  Makefile  PACKAGING.md  README.md  renovate.json
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: benchmarks.md  generate_charts.py
docs/superpowers/plans/: 2026-03-28-blazehash-core.md  2026-03-29-forensic-formats.md  2026-03-31-blazehash-mcp.md
docs/superpowers/specs/: 2026-03-30-blazehash-mcp-design.md
src/: algorithm.rs  audit.rs  cli.rs  handlers.rs  hash.rs  lib.rs  main.rs  manifest.rs  mcp.rs  output.rs  piecewise.rs  resume.rs  walk.rs
src/commands/: audit.rs  hash.rs  mod.rs  piecewise.rs  size_only.rs  verify_image.rs
src/forensic_image/: ewf_backend.rs  mod.rs
src/format/: csv.rs  json.rs  mod.rs
tests/: algorithm_tests.rs  audit_tests.rs  benchmark_tests.rs  cli_tests.rs  e2e_tests.rs  format_tests.rs  hash_tests.rs  manifest_tests.rs  mcp_tests.rs  piecewise_tests.rs  resume_tests.rs  verify_image_tests.rs  walk_tests.rs
wix/: main.wxs
