[package]
name = "blazehash"
version = "0.1.0"
edition = "2021"
description = "Forensic file hasher — hashdeep for the modern era, BLAKE3 by default"
license = "MIT"
repository = "https://github.com/SecurityRonin/blazehash"
keywords = ["hash", "forensics", "blake3", "hashdeep", "dfir"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "blazehash"
path = "src/main.rs"

[lib]
name = "blazehash"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
digest = "0.10"
hex = "0.4"
md-5 = "0.10"
memmap2 = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
sha3 = "0.10"
tiger = "0.2"
walkdir = "2"
whirlpool = "0.10"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
